# ft_gkrellm

./: CMakeLists.txt  Makefile
src/: main.cpp
src/Data/: ModuleData.cpp  ModuleData.hpp
src/Display/: AMonitorDisplay.cpp  AMonitorDisplay.hpp  Gtk3Display.cpp  Gtk3Display.hpp  IMonitorDisplay.hpp  NcursesDisplay.cpp  NcursesDisplay.hpp
src/Monitor/: AMonitorModule.cpp  AMonitorModule.hpp  CPUMonitorModule.cpp  CPUMonitorModule.hpp  DateTimeMonitorModule.cpp  DateTimeMonitorModule.hpp  DiskMonitorModule.cpp  DiskMonitorModule.hpp  IMonitorModule.hpp  MemoryMonitorModule.cpp  MemoryMonitorModule.hpp  NameMonitorModule.cpp  NameMonitorModule.hpp  NetworkMonitorModule.cpp  NetworkMonitorModule.hpp  OSInfoMonitorModule.cpp  OSInfoMonitorModule.hpp
src/Utils/: utils.hpp
